[gd_scene format=3 uid="uid://be87n5k6m4l3r"]

[ext_resource type="Script" path="res://scripts/fail_popup.gd" id="1_script"]

[node name="FailPopup" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(360, 640)
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "OVERSHOT!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HomeButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "HOME"

[node name="ReplayButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "REPLAY"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/HomeButton" to="." method="_on_home_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ReplayButton" to="." method="_on_replay_pressed"]
